<resources>
    <string name="app_name">Aria</string>
    <string name="app_name_with_description">Aria - Auto Backup</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Aria</string>

    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="general_settings">General</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings related to Preferances -->
    <string name="uploadVideosPreferenceSwitch">Upload videos</string>
    <string name="free_memory_after_upload_preference_switch">Free device memory after upload</string>
    <string name="uploadPhotosPreferenceSwitch">Upload photos</string>
    <string name="showNotificationPreferenceSwitch">Notifications</string>

    <string name="uploadVideosPreferenceSummary">Upload videos to your PC</string>
    <string name="deleteAfterUploadPreferenceSummary">The content will be deleted locally after upload</string>
    <string name="uploadPhotosPreferenceSummary">Upload photos to your PC</string>
    <string name="showNotificationPreferenceSummary">Show notifications while uploading</string>
    <string name="upload_settings">Upload</string>

    <!--Strings related to navigation drawer-->
    <string name="nav_settings">Settings</string>
    <string name="nav_status">Status</string>
    <string name="nav_servers">Servers</string>
    <string name="nav_about">About &amp; Contact</string>


    <!-- Strings related to Intro -->
    <string name="intro_1_title">Welcome to Aria</string>
    <string name="intro_1_description">This app helps you to automatically backup your photos to your PC</string>
    <string name="intro_2_title">test.ro</string>
    <string name="intro_2_description">Access this URL from your PC to donwload the server</string>
    <string name="intro_2_intent_share_url_title">Share URL</string>
    <string name="intro_3_title">Permissions</string>
    <string name="intro_3_description">In order for this app to work, you need to grand the permissions. \"Write External Storage\" is needed for the app to search for photos. \"Read Phone State\" is needed for the server to identify your device.</string>
    <string name="button_download_link_text">Share URL</string>
    <string name="toast_after_button_download_click">URL Copied to clipboard</string>
    <string name="URL_download">http://test.ro</string>

    <!--Strings related to FAB Intro Prompt-->
    <string name="fab_prompt_primary_text">Upload a custom file</string>
    <string name="fab_prompt_secondary_text">Tap the button to upload to your PC a specific file from your device.</string>

    <!--Strings related to Servers fragment-->
    <string name="searching_text"><b>Searching...</b></string>
    <string name="servers"><b>Servers</b></string>
    <string name="fragment_servers_inexistent_server_description">No server found. Please install the server on your PC by accessing the following URL:</string>
    <string name="fragment_servers_copy_url_text">Copy to clipboard:</string>
    <string name="fragment_servers_share_url_text">Share URL:</string>
    <string name="fragment_servers_copy_url_button">Copy</string>
    <string name="fragment_servers_share_url_button">Share</string>

    <!--Strings related to about fragment-->
    <string name="about_version">Version 0.1</string>
    <string name="about_connect_with_us_section">Connect with us</string>
    <string name="about_copyright_section">Copyright &amp; License</string>
    <string name="about_copyright">Constantin Bogdan-Theodor %1$d</string>
    <string name="about_license">Read license</string>
    <string name="about_description">%1$s is an app that helps you to automatically back-up your photos and videos to your PC when you connect to your local wi-fi. It also helps you to upload custom files, picked up by you so you don\'t have to plug-in your data cable.</string>

    <!--Strings related to Status fragment-->
    <string name="status_chart_entry_uploaded">Uploaded</string>
    <string name="status_chart_entry_to_be_uploaded">Remaining to upload</string>
    <string name="status_chart_data_set_label"># photos</string>

    <!--Strings related to license fragment-->
    <string name="fragment_license_title">License</string>

    <!--Strings related to notifications-->
    <string name="notification_uploading_now_title">Uploading Media</string>
    <string name="notification_uploading_now_content">%1$d of %2$d</string>
    <string name="notification_connection_lost_title">Connection Lost</string>
    <string name="notification_upload_finished_title">Upload Finished</string>
    <string name="notification_upload_finished_content">Uploaded: %1$d</string>
    <string name="notification_nonexistent_server_title">Nonexistent Server</string>
    <string name="notification_nonexistent_server_content">Click notification to select a server</string>
    <string name="notification_permissions_title">Nonexistent Server</string>
    <string name="notification_permissions_content">Click notification to select a server</string>
    <string name="notification_no_wifi_title">Wi-fi not connected</string>
    <string name="notification_no_wifi_content">Connect to a wi-fi network to upload a file</string>
    <string name="notification_server_not_reacheble_title">Server not reacheble</string>
    <string name="notification_server_not_reacheble_content">Server should be online to upload a file</string>
    <string name="notification_uploading_custom_file_title">Uploading file</string>
    <string name="notification_uploading_custom_file_content">Uploading a selected file to the server</string>
    <string name="notification_uploading_custom_file_finished_title">Upload complete</string>
    <string name="notification_uploading_custom_file_finished_content">File uploaded succefully to the server</string>
    <string name="notification_uploading_custom_file_failed_title">Upload failed</string>
    <string name="notification_uploading_custom_file_failed_content">An error has occurred</string>
</resources>
