<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="@string/general_settings">

        <SwitchPreference
            android:title="@string/showNotificationPreferenceSwitch"
            android:key="showNotificationPreference"
            android:defaultValue="true"
            android:summary="@string/showNotificationPreferenceSummary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/upload_settings">

        <SwitchPreference
            android:title="@string/uploadPhotosPreferenceSwitch"
            android:key="uploadPhotosPreference"
            android:defaultValue="true"
            android:summary="@string/uploadPhotosPreferenceSummary"/>

        <SwitchPreference
            android:title="@string/uploadVideosPreferenceSwitch"
            android:key="uploadVideosPreference"
            android:defaultValue="false"
            android:summary="@string/uploadVideosPreferenceSummary"/>

        <SwitchPreference
            android:title="@string/deleteAfterUploadPreferenceSwitch"
            android:key="deleteMediaAfterUploadPreference"
            android:defaultValue="false"
            android:summary="@string/deleteAfterUploadPreferenceSummary"/>

    </PreferenceCategory>


</PreferenceScreen>