<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_items"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_data_usage_black_24dp"
            android:title="@string/nav_status" />

        <item
            android:id="@+id/nav_servers"
            android:icon="@drawable/ic_desktop_windows_black_24dp"
            android:title="@string/nav_servers" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />


    </group>


    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/nav_about" />

</menu>
