<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4"
    android:padding="16dp"
    android:id="@+id/test">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/fragment_servers_inexistent_server_description" />

    <TextView
        android:id="@+id/fragment_servers_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_columnSpan="2"
        android:text="@string/server_download_url"
        android:textColor="@color/accent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:text="@string/fragment_servers_share_url_text" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/fragment_servers_button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_share_black_24dp"
        android:text="@string/fragment_servers_share_url_button"
        android:layout_gravity="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:text="@string/fragment_servers_copy_url_text" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/fragment_servers_button_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_servers_copy_url_button"
        android:drawableStart="@drawable/ic_content_copy_black_24dp"
        android:layout_gravity="end" />

</GridLayout>